# Smart-Classroom-Face-Recognition

./: .gitignore  GIT_NOTE_SIMPLE.md  README.md  pyproject.toml
config/: config.yaml
core/: audit.py  config_manager.py  crypto_manager.py  data_access.py  database.py  model_factory.py  models.py  runtime_settings.py  security.py
docs/: 安全与稳定性.md
docs/账号库/: README.md  accounts.example.yml
models/backbones/: fastcontextface.py  resnet.py
models/detectors/: yolo_detector.py
scripts/: encrypt_existing_faces.py  generate_face_data_key.py  verify_permissions.py
services/: face_service.py
ultralytics/nn/modules/: improvements.py  yolo13.py
web/: app.py
web/static/: template.xlsx
web/static/css/: admin_style.css
web/static/js/: main.js
web/templates/: analysis.html  audit.html  base.html  courses.html  dashboard.html  history.html  index.html  login.html  my_attendance.html  my_courses.html  settings.html  students.html  users.html
